# django-case-insensitive-user

./: .pre-commit-config.yaml  LICENSE  README.md  runtests.py  setup.cfg  tox.ini
.github/workflows/: publish_package.yml  test_pr.yml
case_insensitive_user/: admin.py  apps.py  conf.py  models.py
case_insensitive_user/migrations/: 0001_initial.py
tests/: __init__.py  test_models.py
