[flake8]
max_line_length = 88
exclude = .git,*/migrations/*,venv

[isort]
extend_skip_glob = **/migrations/*
profile = black
src_paths = case_insensitive_user

[coverage:run]
branch = true
omit = */migrations/*,tests
source = case_insensitive_user

[coverage:report]
fail_under = 100
show_missing = true
skip_covered = true

[metadata]
name = django-case-insensitive-user
version = 0.1.1
description = Small app that extends default Django user to have case-insensitive username.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alenzeinolov/django-case-insensitive-user
author = Alen Zeinolov
author_email = alenzeinolov@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 3.2
